search button added

--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
             color: black;
             border-radius: 20px 50px 20px 50px;
             padding: auto;
+        }
+        .btn5 {
+            border: none;
+            background: #0307fc;
+            color: white;
+            border-radius: 100px 70px 70px 100px;
+            padding: auto;
+        }
+
     </style>
 </head>
 
@@ -43,7 +52,7 @@
     <button class="btn2">↑ Add File</button>
     <button class="btn3">🔒Login</button>
     <button class="btn4">✈️Courses</button>
-    <button class="btn5"></button>
+    <button class="btn5">Search</button>
 </body>
 
 </html>
